# stocks

./: .gitignore  HANDOFF.md  README.md  WORK_SUMMARY.md  pyproject.toml
configs/: kiwoom_official_endpoint_manifest.json
docs/: v15.6.0-real-ka10081-readonly-verification.md
examples/: kiwoom_watchlist_20_sample.csv  kiwoom_watchlist_sample.txt
policies/: default_policy.yaml
scripts/: preview_dashboard.py  run_kiwoom_ka10081_capture_train_resumable.sh  run_kiwoom_ka10081_real_watchlist_20_readonly.sh  run_kiwoom_watchlist_capture_train.sh
tests/: test_account_read_adapter.py  test_account_read_checkpoint.py  test_account_read_guard.py  test_account_read_models.py  test_account_read_snapshot_engine.py  test_agent_brief.py  test_agent_cli.py  test_agent_context.py  test_agent_guardrails.py  test_agent_prompt.py  test_agent_tools.py  test_alerts.py  test_allocation_policy_training_cli.py  test_allocation_policy_training_engine.py  test_allocation_policy_training_models.py  test_analysis_report.py  test_asof_price_history.py  test_backtest.py  test_basket.py  test_basket_allocator.py  test_basket_backtest.py  test_basket_builder.py  test_basket_performance.py  test_basket_risk.py  test_basket_scoring.py  test_breadth_leadership_routing_cli.py  test_breadth_leadership_routing_engine.py  test_breadth_leadership_routing_models.py  test_broker_adapter_safety.py  test_broker_adapter_service.py  test_broker_cli.py  test_broker_mock_adapter_cli.py  test_broker_mock_adapter_engine.py  test_broker_mock_adapter_models.py  test_broker_models.py  test_broker_repository.py  (+502 more)
(+774 files in other folders)
